fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ body {
   max-width: 320px;         /* keeps name from stretching */
   text-align: center;
   justify-self: center;
-  margin-left: 40px; ;
+  margin-left: 100px; ;
 }
 
 .header-text h1 {
